--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1829,242 +1829,22 @@ body {
 .cid-qwIM0j9VqL I {
   color: #cccccc;
 }
-.cid-qwIN8u1gEe .modal-body .close {
-  background: #1b1b1b;
+.cid-qwLpaa8ZvD {
+  background-image: url("../../../assets/images/background2.jpg");
 }
-.cid-qwIN8u1gEe .modal-body .close span {
-  font-style: normal;
+.cid-qwLpaa8ZvD .mbr-section-subtitle {
+  letter-spacing: .2rem;
 }
-.cid-qwIN8u1gEe .carousel-inner > .active,
-.cid-qwIN8u1gEe .carousel-inner > .next,
-.cid-qwIN8u1gEe .carousel-inner > .prev {
-  display: table;
+.cid-qwM7NutHwf {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/jumbotron.jpg");
 }
-.cid-qwIN8u1gEe .carousel-control .icon-next,
-.cid-qwIN8u1gEe .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
+.cid-qwM2OZoFg0 {
+  background-image: url("../../../assets/images/1-omux1g4hukwajqbgxhitjg-1280x720.jpg");
 }
-.cid-qwIN8u1gEe .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-qwIN8u1gEe .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-qwIN8u1gEe .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-qwIN8u1gEe .boxed-slider > div {
-  position: relative;
-}
-.cid-qwIN8u1gEe .container img {
-  width: 100%;
-}
-.cid-qwIN8u1gEe .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-qwIN8u1gEe .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-qwIN8u1gEe .mbr-table-cell {
-  padding: 0;
-}
-.cid-qwIN8u1gEe .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-qwIN8u1gEe .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-qwIN8u1gEe .mbr-overlay {
-  z-index: 1;
-}
-.cid-qwIN8u1gEe .container-slide.container {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-qwIN8u1gEe .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-qwIN8u1gEe .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-qwIN8u1gEe .carousel-item-next.carousel-item-left,
-.cid-qwIN8u1gEe .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-qwIN8u1gEe .active.carousel-item-right,
-.cid-qwIN8u1gEe .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-qwIN8u1gEe .active.carousel-item-left,
-.cid-qwIN8u1gEe .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-control {
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-qwIN8u1gEe .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators li {
-  max-width: 20px;
-  width: 20px;
-  height: 20px;
-  max-height: 20px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators li.active,
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators li::after,
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-qwIN8u1gEe .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-qwIN8u1gEe .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-qwIN8u1gEe .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-qwIN8u1gEe .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-qwIN8u1gEe .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-qwIN8u1gEe .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-qwIN8u1gEe .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-qwIN8u1gEe .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-qwIN8u1gEe .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-qwIN8u1gEe .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-qwIN8u1gEe .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-qwIN8u1gEe .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-qwIN8u1gEe .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-qwIN8u1gEe .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-qwIN8u1gEe .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-qwIN8u1gEe .mbr-overlay ~ .container-slide {
-  z-index: auto;
+.cid-qwM2OZoFg0 .mbr-section-subtitle {
+  letter-spacing: .2rem;
 }
 .cid-qwIV2bknDU {
   padding-top: 90px;
